added untested naive implementation of canister sigs
Signed-off-by: Dominic Woerner <dominic.woerner@dfinity.org>

--- a/src/jwt_issuer_poc_frontend/src/index.html
+++ b/src/jwt_issuer_poc_frontend/src/index.html
@@ -18,6 +18,7 @@
         <select name="kind" id="token_kind">
           <option value="mac">HMAC</option>
           <option value="tecdsa" selected>tECDSA </option>
+          <option value="iccsa">ICCSA </option>
       </select>
         <button type="submit">Issue JWT</button>
       </form>
